# EmbeddedSystemsUT602xLabs

./: .gitignore  README.md
EdXEmbeddedSystems/: CMakeLists.txt  EdXEmbeddedSystems.sln
EdXEmbeddedSystems/EdXEmbeddedSystems/: EdXEmbeddedSystems (2).vgdbsettings  EdXEmbeddedSystems-Debug.vgdbsettings  EdXEmbeddedSystems.filters  EdXEmbeddedSystems.ld  EdXEmbeddedSystems.vcxproj  EdXEmbeddedSystems.vcxproj.filters  EdXEmbeddedSystems.vgdbsettings  MCU.xml  Makefile  Makefile.old  blinky.c  debug.mak  debug.mak.old  gcc_Debug.h  gcc_Release.h  main.cpp  mcu.mak  mcu.mak.old  startup_ccs.c  startup_ewarm.c  startup_gcc.c
EdXEmbeddedSystems/EdXEmbeddedSystemsTests/Tests/: EdXEmbeddedSystemTests.vcxproj  EdXEmbeddedSystemTests.vcxproj.filters  tests.Lab4.cpp
EdXEmbeddedSystems/Lab4/: .cproject  .project  Lab4-Debug.vgdbsettings  Lab4-Release.vgdbsettings  Lab4.vcxproj  Lab4.vcxproj.filters  MCU.xml  Makefile  Makefile.old  debug.mak  debug.mak.old  gcc_Debug.h  mcu.mak
EdXEmbeddedSystems/Lab4_IO/: Lab4.uvgui.Richard Keast  launchpadswitch.crf
EdXEmbeddedSystems/Lab5_FunctionsInC/: lab5.crf  main.d
EdXEmbeddedSystems/Lab6_BranchingFunctionsDelays/: Lab6.cpp  Lab6.h
EdXEmbeddedSystems/LabBaseCode/: LabBaseCode.vcxproj  LabBaseCode.vcxproj.filters
EdXEmbeddedSystems/Labs/Lab11_UART/: main.c
EdXEmbeddedSystems/Labs/Lab14_MeasurementOfDistance/: MeasurementOfDistance.c
EdXEmbeddedSystems/Labs/Lab14_VirtualMeasurementOfDistance/: MeasurementOfDistance.c
EdXEmbeddedSystems/Mocks/: mock.SerialIO.h  mock.Timer.h
EdXEmbeddedSystems/gtest-1.7.0/: .cproject
(+227 files in other folders)
